--- a/app/src/main/res/layout/fragment_pedido_detail.xml
+++ b/app/src/main/res/layout/fragment_pedido_detail.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
@@ -47,5 +48,19 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:text="Método de Pago:" />
+
+    <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:text="Detalles del Pedido:"
+            android:textStyle="bold" />
+
+    <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/detallesPedidoRecyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
 
 </LinearLayout>
