--- a/app/src/main/res/layout/fragment_producto_detail.xml
+++ b/app/src/main/res/layout/fragment_producto_detail.xml
@@ -14,7 +14,7 @@
             android:layout_width="match_parent"
             android:layout_height="200dp"
             android:scaleType="centerCrop"
-            android:src="@drawable/ic_placeholder" />
+            android:src="@drawable/leche" />
 
         <TextView
             android:id="@+id/nombreTextView"
